[gd_scene load_steps=17 format=3 uid="uid://bqduy4u8regjo"]

[ext_resource type="Script" path="res://Scripts/Zones/Temple/MainPage.gd" id="1_n2wv5"]
[ext_resource type="Script" path="res://Scripts/Zones/Temple/ShopScript.gd" id="2_m5fe6"]
[ext_resource type="Texture2D" uid="uid://d3o00kxuo4h22" path="res://Assets/Images/HUD/Loja/ScrollsBG.png" id="3_0xrjq"]
[ext_resource type="PackedScene" uid="uid://dsr560ixpdq5a" path="res://Scenes/Game/ScrollsController/ScrollHud.tscn" id="4_3pkcr"]
[ext_resource type="FontFile" uid="uid://df4il2aive3ok" path="res://Assets/Fonts/Zeus-Land.otf" id="4_l0n46"]
[ext_resource type="PackedScene" uid="uid://bn814iyfbtpnc" path="res://Scenes/Game/Constructions/Temple/Shop/ShopScreen.tscn" id="4_r0ljt"]
[ext_resource type="Texture2D" uid="uid://ctvkf1u451ub3" path="res://Assets/Images/HUD/Loja/Slots.png" id="7_1621l"]
[ext_resource type="Texture2D" uid="uid://cvi4vcyjfl284" path="res://Assets/Images/HUD/Loja/Ores/Rock.png" id="7_irgpp"]
[ext_resource type="Texture2D" uid="uid://cxnn4leqp0b1i" path="res://Assets/Images/HUD/Loja/Ores/Wood.png" id="9_chtjw"]
[ext_resource type="Texture2D" uid="uid://bp4nnroubqrqp" path="res://Assets/Images/HUD/Loja/Ores/Gold.png" id="10_pnbkw"]
[ext_resource type="PackedScene" uid="uid://bpfityhkpmxkm" path="res://Scenes/Game/ItemController/ItemHUD.tscn" id="11_ux1aq"]
[ext_resource type="PackedScene" uid="uid://deg8hjpbk2ykd" path="res://Scenes/Game/Constructions/Temple/Upgrade/mineração.tscn" id="12_e63eq"]
[ext_resource type="PackedScene" uid="uid://dvgvp2thpqg12" path="res://Scenes/Game/LevelUp/Stats.tscn" id="12_lb4mt"]
[ext_resource type="Texture2D" uid="uid://c8uedu3u1iprj" path="res://Assets/Images/HUD/Loja/BarraMenu.png" id="12_wrag8"]
[ext_resource type="PackedScene" uid="uid://d3gj72p3eit3p" path="res://Scenes/Game/Constructions/Temple/Upgrade/personagem.tscn" id="13_mclth"]
[ext_resource type="PackedScene" uid="uid://cooqeupudot5l" path="res://Scenes/Game/Constructions/Temple/Upgrade/defender_point.tscn" id="14_ij6xs"]

[node name="TempleScreen" type="Node2D"]
script = ExtResource("1_n2wv5")

[node name="BG" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -2.0
offset_right = 1029.0
offset_bottom = 604.0
color = Color(0.337255, 0.337255, 0.337255, 1)

[node name="SHOP" type="Node2D" parent="BG"]
position = Vector2(1, 0)
script = ExtResource("2_m5fe6")

[node name="LOJA" type="ColorRect" parent="BG/SHOP"]
offset_left = 5.0
offset_top = 43.0
offset_right = 466.0
offset_bottom = 606.0
color = Color(0.592157, 0.592157, 0.592157, 1)

[node name="ScrollsBg" type="Sprite2D" parent="BG/SHOP"]
position = Vector2(235.5, 321)
scale = Vector2(0.748777, 0.501786)
texture = ExtResource("3_0xrjq")

[node name="ShopScreen" parent="BG/SHOP" instance=ExtResource("4_r0ljt")]
position = Vector2(20, 51)
scale = Vector2(0.933, 0.963)

[node name="ScrollImage" parent="BG/SHOP/ShopScreen/Slots/Slot1/ScrollOrItem/Scroll" index="0"]
focus_neighbor_top = NodePath("../../../../../../../MenuPrincipal/Abas/Shop")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("../../../../Slot2/ScrollOrItem/Scroll/ScrollImage")

[node name="BuyScrollSlot1" parent="BG/SHOP/ShopScreen/Slots/Slot1/ScrollOrItem/Scroll" index="1"]
focus_neighbor_top = NodePath("../../../../../../../MenuPrincipal/Abas/Shop")
focus_neighbor_bottom = NodePath("../../../../Slot2/ScrollOrItem/Item/BuyItemSlot2")

[node name="BuyItemSlot1" parent="BG/SHOP/ShopScreen/Slots/Slot1/ScrollOrItem/Item" index="1"]
focus_neighbor_left = NodePath("../../Scroll/ScrollImage")
focus_neighbor_right = NodePath("../../../LockSlot1")
focus_neighbor_bottom = NodePath("../../../../Slot2/ScrollOrItem/Item/BuyItemSlot2")

[node name="LockSlot1" parent="BG/SHOP/ShopScreen/Slots/Slot1" index="2"]
focus_neighbor_top = NodePath("../../../../../MenuPrincipal/Abas/Shop")
focus_neighbor_bottom = NodePath("../../Slot2/LockSlot2")

[node name="BuyScrollSlot2" parent="BG/SHOP/ShopScreen/Slots/Slot2/ScrollOrItem/Scroll" index="1"]
focus_neighbor_top = NodePath("../../../../Slot1/ScrollOrItem/Item/BuyItemSlot1")
focus_neighbor_bottom = NodePath("../../../../Slot3/ScrollOrItem/Item/BuyItemSlot3")

[node name="Item" parent="BG/SHOP/ShopScreen/Slots/Slot2/ScrollOrItem" index="1"]
visible = false

[node name="LockSlot2" parent="BG/SHOP/ShopScreen/Slots/Slot2" index="2"]
focus_neighbor_top = NodePath("../../Slot1/LockSlot1")
focus_neighbor_bottom = NodePath("../../Slot3/LockSlot3")

[node name="LockSlot3" parent="BG/SHOP/ShopScreen/Slots/Slot3" index="2"]
focus_neighbor_top = NodePath("../../Slot2/LockSlot2")
focus_neighbor_bottom = NodePath("../../Slot4/LockSlot4")

[node name="LockSlot4" parent="BG/SHOP/ShopScreen/Slots/Slot4" index="2"]
focus_neighbor_top = NodePath("../../Slot3/LockSlot3")
focus_neighbor_bottom = NodePath("../../../Refresh")

[node name="Refresh" parent="BG/SHOP/ShopScreen" index="2"]
focus_neighbor_right = NodePath("../../MINHAS_COISAS___TROCA/MinhasCoisas")
focus_neighbor_bottom = NodePath("")

[node name="MINHAS_COISAS___TROCA" type="Node2D" parent="BG/SHOP"]

[node name="ScrollHud" parent="BG/SHOP/MINHAS_COISAS___TROCA" instance=ExtResource("4_3pkcr")]
position = Vector2(465, 41)
scale = Vector2(0.125, 0.125)

[node name="Passives" parent="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud/MINHASCOISAS" index="11"]
layout_mode = 0
offset_left = 0.0
offset_top = 11.0
offset_right = 63.0
offset_bottom = 37.0

[node name="Selected" parent="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud" index="2"]
visible = false

[node name="ColorRect" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud/Selected" index="0"]
offset_left = -3608.0
offset_top = -88.0
offset_right = -64.0
offset_bottom = 4448.0
color = Color(0, 0, 0, 0.737255)

[node name="Combine" parent="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud/Selected/Buttons" index="0"]
flat = true

[node name="Sell" parent="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud/Selected/Buttons" index="1"]
flat = true

[node name="Equip" parent="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud/Selected/Buttons" index="2"]
flat = true

[node name="Close" parent="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud/Selected/Buttons" index="3"]
flat = true

[node name="TROCA" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
visible = false
offset_left = 466.0
offset_top = 42.0
offset_right = 883.0
offset_bottom = 605.0
color = Color(0.643137, 0.643137, 0.643137, 1)

[node name="Ouro" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
position = Vector2(205, 132)
scale = Vector2(0.437427, 0.43)
texture = ExtResource("7_1621l")

[node name="GoldForStone" type="TextureButton" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro"]
offset_left = -43.4358
offset_top = -120.93
offset_right = 159.564
offset_bottom = 88.0697
focus_neighbor_right = NodePath("../GoldForWood")
focus_neighbor_bottom = NodePath("../../Pedra/StoneForGold")
texture_normal = ExtResource("7_irgpp")
ignore_texture_size = true
stretch_mode = 0

[node name="Ammount" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForStone"]
layout_mode = 0
offset_left = 98.3021
offset_top = 190.697
offset_right = 185.302
offset_bottom = 217.697
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "1"

[node name="Selected" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForStone"]
visible = false
layout_mode = 0
offset_left = 4.43604
offset_top = 20.93
offset_right = 203.436
offset_bottom = 220.93
color = Color(0, 0, 0, 0.513726)

[node name="GoldForWood" type="TextureButton" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro"]
offset_left = 224.037
offset_top = -113.953
offset_right = 432.037
offset_bottom = 101.047
focus_neighbor_left = NodePath("../GoldForStone")
focus_neighbor_bottom = NodePath("../../Pedra/StoneForWood")
texture_normal = ExtResource("9_chtjw")
ignore_texture_size = true
stretch_mode = 0

[node name="Ammount" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForWood"]
layout_mode = 0
offset_left = 98.3024
offset_top = 181.395
offset_right = 196.302
offset_bottom = 208.395
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "1"

[node name="Selected" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForWood"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 14.0
offset_right = 204.0
offset_bottom = 214.0
color = Color(0, 0, 0, 0.513726)

[node name="Wood" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro"]
position = Vector2(-340.628, -2.32562)
scale = Vector2(2.8, 2.8)
texture = ExtResource("10_pnbkw")

[node name="Sold" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro"]
offset_left = -265.187
offset_top = 67.4418
offset_right = -178.187
offset_bottom = 94.4418
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "2"

[node name="Pedra" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
position = Vector2(205, 254)
scale = Vector2(0.437427, 0.43)
texture = ExtResource("7_1621l")

[node name="StoneForGold" type="TextureButton" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra"]
offset_left = -25.1471
offset_top = -90.6976
offset_right = 139.853
offset_bottom = 76.3024
focus_neighbor_top = NodePath("../../Ouro/GoldForStone")
focus_neighbor_right = NodePath("../StoneForWood")
focus_neighbor_bottom = NodePath("../../Madeira/WoodForGold")
texture_normal = ExtResource("10_pnbkw")
ignore_texture_size = true
stretch_mode = 0

[node name="Ammount" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForGold"]
layout_mode = 0
offset_left = 43.4358
offset_top = 158.14
offset_right = 152.436
offset_bottom = 185.14
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "25 for 1"

[node name="Selected" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForGold"]
visible = false
layout_mode = 0
offset_left = -13.7166
offset_top = -9.30243
offset_right = 185.283
offset_bottom = 190.698
color = Color(0, 0, 0, 0.513726)

[node name="StoneForWood" type="TextureButton" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra"]
offset_left = 224.037
offset_top = -120.93
offset_right = 432.037
offset_bottom = 98.0697
focus_neighbor_left = NodePath("../StoneForGold")
focus_neighbor_top = NodePath("../../Ouro/GoldForWood")
focus_neighbor_bottom = NodePath("../../Madeira/WoodForStone")
texture_normal = ExtResource("9_chtjw")
ignore_texture_size = true
stretch_mode = 0

[node name="Ammount" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForWood"]
layout_mode = 0
offset_left = 59.4385
offset_top = 188.372
offset_right = 145.438
offset_bottom = 215.372
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "5 for 12"

[node name="Selected" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForWood"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 21.0
offset_right = 203.0
offset_bottom = 221.0
color = Color(0, 0, 0, 0.513726)

[node name="Wood" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra"]
position = Vector2(-331.482, -13.9536)
scale = Vector2(2.8, 2.831)
texture = ExtResource("7_irgpp")

[node name="Sold" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra"]
offset_left = -265.187
offset_top = 67.4418
offset_right = -178.187
offset_bottom = 94.4418
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "2"

[node name="Madeira" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
position = Vector2(205, 385)
scale = Vector2(0.437427, 0.43)
texture = ExtResource("7_1621l")

[node name="Wood" type="Sprite2D" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira"]
position = Vector2(-329.191, 2.32715)
scale = Vector2(2.8, 2.8)
texture = ExtResource("9_chtjw")

[node name="WoodForGold" type="TextureButton" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira"]
offset_left = -36.5775
offset_top = -100.0
offset_right = 128.422
offset_bottom = 71.9999
focus_neighbor_top = NodePath("../../Pedra/StoneForGold")
focus_neighbor_right = NodePath("../WoodForStone")
focus_neighbor_bottom = NodePath("../../../Troca")
texture_normal = ExtResource("10_pnbkw")
ignore_texture_size = true
stretch_mode = 0

[node name="Ammount" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForGold"]
layout_mode = 0
offset_left = 50.2941
offset_top = 169.767
offset_right = 147.294
offset_bottom = 196.767
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "50 for 1"

[node name="Selected" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForGold"]
visible = false
layout_mode = 0
offset_left = -2.28613
offset_right = 196.714
offset_bottom = 200.0
color = Color(0, 0, 0, 0.513726)

[node name="WoodForStone" type="TextureButton" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira"]
offset_left = 233.0
offset_top = -119.0
offset_right = 423.0
offset_bottom = 79.0
focus_neighbor_left = NodePath("../WoodForGold")
focus_neighbor_top = NodePath("../../Pedra/StoneForWood")
focus_neighbor_bottom = NodePath("../../../Troca")
texture_normal = ExtResource("7_irgpp")
ignore_texture_size = true
stretch_mode = 0

[node name="Ammount" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForStone"]
layout_mode = 0
offset_left = 48.1898
offset_top = 186.442
offset_right = 145.19
offset_bottom = 213.442
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "25 for 1"

[node name="Selected" type="ColorRect" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForStone"]
visible = false
layout_mode = 0
offset_left = -7.0
offset_top = 19.0
offset_right = 194.0
offset_bottom = 219.0
color = Color(0, 0, 0, 0.513726)

[node name="Sold" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira"]
offset_left = -265.187
offset_top = 67.4418
offset_right = -178.187
offset_bottom = 94.4418
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "2"

[node name="For" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
layout_mode = 0
offset_left = 139.0
offset_top = 161.0
offset_right = 226.0
offset_bottom = 188.0
scale = Vector2(0.437427, 0.43)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "For
"

[node name="For2" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
layout_mode = 0
offset_left = 138.0
offset_top = 282.0
offset_right = 225.0
offset_bottom = 309.0
scale = Vector2(0.437427, 0.43)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "For
"

[node name="For3" type="Label" parent="BG/SHOP/MINHAS_COISAS___TROCA/TROCA"]
layout_mode = 0
offset_left = 140.0
offset_top = 414.0
offset_right = 227.0
offset_bottom = 441.0
scale = Vector2(0.437427, 0.43)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "For
"

[node name="ItemHUD" parent="BG/SHOP/MINHAS_COISAS___TROCA" instance=ExtResource("11_ux1aq")]
visible = false
position = Vector2(466, 41)
scale = Vector2(0.52, 0.525)

[node name="MinhasCoisas" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 471.0
offset_top = 572.0
offset_right = 627.0
offset_bottom = 603.0
focus_neighbor_left = NodePath("../../ShopScreen/Refresh")
focus_neighbor_right = NodePath("../Troca")
theme_override_colors/font_color = Color(0.410156, 0.410156, 0.410156, 1)
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 20
text = "skills"
flat = true

[node name="Troca" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 639.0
offset_top = 572.0
offset_right = 693.0
offset_bottom = 603.0
theme_override_colors/font_color = Color(0.410156, 0.410156, 0.410156, 1)
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 20
text = "trade"
flat = true

[node name="Itens" type="Button" parent="BG/SHOP/MINHAS_COISAS___TROCA"]
offset_left = 736.0
offset_top = 572.0
offset_right = 800.0
offset_bottom = 603.0
focus_neighbor_left = NodePath("../Troca")
theme_override_colors/font_color = Color(0.410156, 0.410156, 0.410156, 1)
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 20
text = "itens"
flat = true

[node name="Stats" parent="BG/SHOP" instance=ExtResource("12_lb4mt")]
position = Vector2(893, 42)
scale = Vector2(0.49, 1.29)

[node name="Mineração" parent="BG" instance=ExtResource("12_e63eq")]
visible = false

[node name="Personagem" parent="BG" instance=ExtResource("13_mclth")]

[node name="Defender Point" parent="BG" instance=ExtResource("14_ij6xs")]

[node name="MenuPrincipal" type="Sprite2D" parent="BG"]
position = Vector2(519.5, 24.5)
scale = Vector2(0.531574, 0.633803)
texture = ExtResource("12_wrag8")

[node name="Labels" type="Node2D" parent="BG/MenuPrincipal"]
position = Vector2(-984.849, -43.3889)
scale = Vector2(1.88488, 1.57778)

[node name="Ouro" type="Label" parent="BG/MenuPrincipal/Labels"]
offset_left = 16.9869
offset_top = 13.0
offset_right = 56.9869
offset_bottom = 36.0

[node name="Wood" type="Label" parent="BG/MenuPrincipal/Labels"]
offset_left = 93.9869
offset_top = 13.0
offset_right = 133.987
offset_bottom = 36.0

[node name="Stone" type="Label" parent="BG/MenuPrincipal/Labels"]
offset_left = 181.987
offset_top = 13.0
offset_right = 221.985
offset_bottom = 36.0

[node name="Abas" type="Node2D" parent="BG/MenuPrincipal"]
position = Vector2(-984.849, -43.3889)
scale = Vector2(1.88488, 1.57778)

[node name="Shop" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 302.43
offset_top = 9.0
offset_right = 384.43
offset_bottom = 41.0
focus_neighbor_left = NodePath("../Defender Point")
focus_neighbor_right = NodePath("../Mineração")
theme_override_colors/font_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_colors/font_pressed_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_colors/font_hover_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "shop"
flat = true

[node name="Mineração" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 389.43
offset_top = 9.0
offset_right = 502.43
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_colors/font_pressed_color = Color(0.227451, 0.227451, 0.227451, 1)
theme_override_colors/font_hover_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "Mining"
flat = true

[node name="Personagem" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 507.03
offset_top = 9.0
offset_right = 640.03
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_colors/font_pressed_color = Color(0.227451, 0.227451, 0.227451, 1)
theme_override_colors/font_hover_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "Character"
flat = true

[node name="Defender Point" type="Button" parent="BG/MenuPrincipal/Abas"]
offset_left = 645.76
offset_top = 9.0
offset_right = 803.76
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_colors/font_pressed_color = Color(0.227451, 0.227451, 0.227451, 1)
theme_override_colors/font_hover_color = Color(0.290196, 0.290196, 0.290196, 1)
theme_override_colors/font_disabled_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("4_l0n46")
theme_override_font_sizes/font_size = 25
text = "Defender Point"
flat = true

[connection signal="focus_entered" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForStone" to="BG/SHOP" method="_on_gold_for_stone_focus_entered"]
[connection signal="focus_exited" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForStone" to="BG/SHOP" method="_on_gold_for_stone_focus_exited"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForStone" to="BG/SHOP" method="_on_gold_for_stone_pressed"]
[connection signal="focus_entered" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForWood" to="BG/SHOP" method="_on_gold_for_wood_focus_entered"]
[connection signal="focus_exited" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForWood" to="BG/SHOP" method="_on_gold_for_wood_focus_exited"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Ouro/GoldForWood" to="BG/SHOP" method="_on_gold_for_wood_pressed"]
[connection signal="focus_entered" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForGold" to="BG/SHOP" method="_on_stone_for_gold_focus_entered"]
[connection signal="focus_exited" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForGold" to="BG/SHOP" method="_on_stone_for_gold_focus_exited"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForGold" to="BG/SHOP" method="_on_stone_for_gold_pressed"]
[connection signal="focus_entered" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForWood" to="BG/SHOP" method="_on_stone_for_wood_focus_entered"]
[connection signal="focus_exited" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForWood" to="BG/SHOP" method="_on_stone_for_wood_focus_exited"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Pedra/StoneForWood" to="BG/SHOP" method="_on_stone_for_wood_pressed"]
[connection signal="focus_entered" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForGold" to="BG/SHOP" method="_on_wood_for_gold_focus_entered"]
[connection signal="focus_exited" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForGold" to="BG/SHOP" method="_on_wood_for_gold_focus_exited"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForGold" to="BG/SHOP" method="_on_wood_for_gold_pressed"]
[connection signal="focus_entered" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForStone" to="BG/SHOP" method="_on_wood_for_stone_focus_entered"]
[connection signal="focus_exited" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForStone" to="BG/SHOP" method="_on_wood_for_stone_focus_exited"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/TROCA/Madeira/WoodForStone" to="BG/SHOP" method="_on_wood_for_stone_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/MinhasCoisas" to="BG/SHOP" method="_on_minhas_coisas_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/Troca" to="BG/SHOP" method="_on_troca_pressed"]
[connection signal="pressed" from="BG/SHOP/MINHAS_COISAS___TROCA/Itens" to="BG/SHOP" method="_on_itens_pressed"]
[connection signal="pressed" from="BG/MenuPrincipal/Abas/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="BG/MenuPrincipal/Abas/Mineração" to="." method="_on_mineração_pressed"]
[connection signal="pressed" from="BG/MenuPrincipal/Abas/Personagem" to="." method="_on_personagem_pressed"]
[connection signal="pressed" from="BG/MenuPrincipal/Abas/Defender Point" to="." method="_on_defender_point_pressed"]

[editable path="BG/SHOP/ShopScreen"]
[editable path="BG/SHOP/MINHAS_COISAS___TROCA/ScrollHud"]
